# treq

./: .gitignore  .tool-versions  BUILD_OPTIMIZATION.md  LICENSE  README.md  agents.md  assets.afdesign  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
.jjconflict-base-0/: README.md  agents.md  eslint.config.js  package-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts
.jjconflict-base-0/docs/: package-lock.json  sidebars.ts
.jjconflict-base-0/test/: CommittedChangesSection.test.tsx  ConsolidatedTerminal.test.tsx  FileBrowser.test.tsx  MergePreviewPage.test.tsx  SearchOverlay.test.tsx  ShowWorkspace.fileNavigation.test.tsx  autoExpandLargeDiff.test.tsx  conflictCommentEdit.test.tsx  finishReviewPopover.test.tsx  multiLineSelection.test.tsx  (+3 more)
.jjconflict-side-1/: .tool-versions  README.md  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
certs/: .env.example
scripts/: generate-icons.js  notarize-local.sh
src/: App.tsx  index.css  main.tsx  monaco-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_rebase.rs  binary_paths.rs  db.rs  file_indexer.rs  git.rs  git2_ops.rs  git_ops.rs  git_watcher.rs  jj.rs  lib.rs  local_db.rs  main.rs  plan_storage.rs  pty.rs  shell.rs
src-tauri/src/commands/: binary.rs  file_view.rs  file_watcher.rs  filesystem.rs  git_cache.rs  git_ops_commands.rs  git_staging.rs  git_status.rs  git_watcher.rs  jj_commands.rs  mod.rs  pty_commands.rs  session.rs  settings.rs  workspace.rs
test/: BranchSwitcher.test.tsx  CommandPalette.test.tsx  ConsolidatedTerminal.test.tsx  Dashboard.test.tsx  FilePicker.test.tsx  LinearCommitHistory.test.tsx  MergePreviewPage.test.tsx  ShowWorkspace.fileNavigation.test.tsx  ShowWorkspace.merge.test.tsx  ShowWorkspace.push.test.tsx  ShowWorkspace.test.tsx  WorkspaceDeletion.test.tsx  cancelReview.test.tsx  changesDiffViewerContextMenu.test.tsx  committedChangesConflicts.test.tsx  conflictCardCombined.test.tsx  conflictCommentButton.test.tsx  conflictCommentForm.test.tsx  conflictCommentToggle.test.tsx  conflictContentStyling.test.tsx  conflictDetection.test.tsx  fileBrowserContextMenu.test.tsx  fileSelectionInReview.test.tsx  fileWatcherIntegration.test.tsx  finishReviewPopover.test.tsx  pendingReviewPersistence.test.tsx  setup.ts  staging-area.test.tsx  test-utils.tsx  text-search.test.ts  utils.test.ts  workspace-stacking.test.ts
(+247 files in other folders)
