[package]
name = "treq"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "treq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
# Tokio with only needed features (instead of "full") for faster compilation
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "fs", "sync"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ignore = "0.4"
walkdir = "2"
globset = "0.4"

# =============================================================================
# Profile Configuration
# =============================================================================

# Development profile - faster compilation with minimal optimization
[profile.dev]
opt-level = 1           # Basic optimization for dev builds (faster than 0, compile time reasonable)
debug = true            # Keep debug symbols for debugging
incremental = true      # Enable incremental compilation

# Compile dependencies with higher optimization in dev mode
# This makes dev builds faster by optimizing slow dependencies once
[profile.dev.package."*"]
opt-level = 2           # Optimize dependencies more aggressively
debug = false           # Strip debug info from dependencies

# Release profile - optimized for size and performance
[profile.release]
opt-level = "z"         # Optimize for size (alternative: "s" for slightly faster code)
lto = "thin"            # Thin Link Time Optimization (good balance of speed vs build time)
codegen-units = 1       # Single codegen unit for better optimization (slower build, smaller binary)
strip = true            # Strip symbols from binary (reduces size significantly)
panic = "abort"         # Abort on panic instead of unwinding (smaller binary)
incremental = false     # Disable incremental for release builds

